--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "Ebubekir Tabak",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^25.0.6",
     "vitepress": "^1.6.4",
     "vue": "^3.5.26"
   }
